
   * Now registers a fallback credentials store, allowing 
     Subversion credentials to be used for non-Subversion 
     access. This is useful accessing http(s) URLs will 
     always attempt to open using the native Bazaar formats 
     first.

   * Better error when pushing to a (diverged) empty branch. Unfortunately
     "bzr push" masks this better error at the moment. (#354929)
 
  PERFORMANCE

   * A custom reverse-tag dictionary implementation is now provided, making 
     "bzr log" a lot faster since there's no need to find all tags beforehand.

  BUG FIXES

   * Support working copies with non-ascii characters in the 
     base path. (#356845)

   * Fix handling of newlines in Bazaar revision properties round-tripped to 
     Subversion file properties. (#360477)

   * utf8-encode basenames when looking up file ids in CHKInventories.

   * Handle root replaces when doing lightweight checkouts. (#352509)
     

bzr-svn 0.5.4                    2009-04-08

  BUG FIXES

   * Ignore spurious commits setting tags to the same revision. (#342824)

   * Fix compatibility with Python2.4.

   * Improve error message if subvertpy can't be found. (#345067)

   * Cope with spaces in branch paths. (#348439)

   * Properly deal with pointless commits when branching the 
     repository root. (#348786)

   * dpush no longer sets custom bzr revision properties. (#351292)

   * Re-use passwords that have been prompted earlier. (#331073) 

   * Fix compatibility with Bazaar 1.14.

  FEATURES

   * A new content filter "svn-keywords" is now supported and behaves like 
     the svn:keywords Subversion file property.

   * Keywords and end of line properties in svn working copies are now honored. 
     (#81463)

   * Support override-svn-revprops = svn:author=author to allow svn:author to be 
     set to the author of a pushed revision rather than the committer. (#342979)


bzr-svn 0.5.3                   2009-03-10

  BUG FIXES
